k8s/argocd-homelab/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  type: ClusterIP
  ports:
    - port: 8989
      targetPort: 8989
      protocol: TCP
  selector:
    app: sonarr
